# CNC_Vac_Pump

./: .gitignore  README.md
CAD/: Back_Cover.STEP  Bezel.STEP  Enclosure.STEP  Encoder.STEP  Knob.STEP  LCD_Support_JXL_.STEP  Round_LCD_1pt28in_JKL.STEP  Rubber_Foot_Strip.STEP  Toggle_Switch.STEP  Vacuum_Plate_v2.SLDPRT  Vacuum_Plate_v2.STEP
Docs/: Vacuum_Pump_BOM.ods
PCB/Vac_Pump_Controller/: Vac_Pump_Controller.kicad_prl  Vac_Pump_Controller.kicad_pro  Vac_Pump_Controller.kicad_sch
source/: lv_conf.h
source/SquareLine_VacDisp/: Sm_Disp.sll  Sm_Disp.spj
source/SquareLine_VacDisp/assets/: Small_Gauge_Needle.xcf  Small_Gauge_Scale.xcf  ui_font_courier_Bold.c  ui_font_courier_Bold.fcfg
source/Vac_Gauge_V2/: Vac_Gauge_V2.ino  encoder.h  notes.h
source/Vac_Gauge_V2/src/ui_lvgl/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_45621010.c  ui_img_dark_led_png.c  ui_img_grn_bug__png.c  ui_img_red_bug__png.c  ui_img_red_led_png.c  ui_img_small_gauge_needle_png.c  ui_img_small_gauge_scale_png.c
